--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,7 @@ node_modules
 
 # Folder acting as a proxy for downloading images from Discord and uploading them to S3 bucket
 downloads
+
+# Files related to hosting Discord on AWS EC2 Instance
+sase-pet-bot.pem
+sase-pet-bot.ppk
